--- a/frontend/index.html
+++ b/frontend/index.html
@@ -167,8 +167,21 @@
         async function addNewLink() {
             const category = document.getElementById('category').value;
             const title = document.getElementById('title').value;
-            const url = document.getElementById('url').value;
+            let url = document.getElementById('url').value.trim();
             const description = document.getElementById('description').value;
+
+            // 如果URL不包含协议，自动添加https://
+            if (url && !url.match(/^https?:\/\//)) {
+                url = 'https://' + url;
+            }
+
+            // URL格式验证
+            try {
+                new URL(url);
+            } catch (e) {
+                alert('请输入有效的网址，例如: https://www.baidu.com');
+                return;
+            }
 
             const data = {
                 category,
