Change website title to TC

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的导航</title>
+    <title>TC</title>
     <style>
         * {
             margin: 0;
@@ -168,7 +168,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>我的导航</h1>
+        <h1>TC</h1>
 
         <!-- 添加新分类的表单 -->
         <div class="add-form">
