--- a/frontend/index.html
+++ b/frontend/index.html
@@ -429,92 +429,176 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
+            width: 320px;
+            padding: 20px;
         }
 
         .section {
             background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            padding: 20px;
+            border-radius: 16px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+            padding: 24px;
+            transition: all 0.3s ease;
+        }
+
+        .section:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 25px rgba(0,0,0,0.12);
         }
 
         .section-title {
-            font-size: 20px;
-            color: #2c3e50;
+            font-size: 18px;
             font-weight: 600;
+            color: #2d3748;
             margin-bottom: 20px;
+            padding-bottom: 12px;
+            border-bottom: 2px solid #f0f2f5;
+        }
+
+        /* 表单样式 */
+        .category-form, .link-form, .note-form {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
         }
 
         .form-group {
-            margin-bottom: 15px;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
         }
 
         .form-group label {
-            display: block;
-            margin-bottom: 8px;
-            color: #2c3e50;
+            font-size: 14px;
             font-weight: 500;
+            color: #4a5568;
         }
 
-        .form-group input,
-        .form-group select,
-        .category-input {
+        input[type="text"], 
+        input[type="url"], 
+        textarea {
             width: 100%;
-            padding: 12px;
-            border: 2px solid #e1e8ed;
-            border-radius: 8px;
-            font-size: 16px;
-            transition: all 0.3s ease;
-        }
-
-        .form-group input:focus,
-        .form-group select:focus,
-        .category-input:focus {
-            outline: none;
-            border-color: #007bff;
-            box-shadow: 0 0 0 3px rgba(0,123,255,0.1);
-        }
-
-        .add-button,
-        .add-link-button {
-            width: 120px;
-            padding: 10px;
-            background: #007bff;
-            color: white;
-            border: none;
+            padding: 10px 12px;
+            border: 2px solid #e2e8f0;
             border-radius: 8px;
             font-size: 14px;
+            transition: all 0.3s ease;
+            background: #f8fafc;
+        }
+
+        input[type="text"]:focus, 
+        input[type="url"]:focus, 
+        textarea:focus {
+            border-color: #3b82f6;
+            background: white;
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+        }
+
+        /* 按钮样式 */
+        .add-button, 
+        .add-link-button, 
+        .add-note-button,
+        .action-button {
+            padding: 12px 20px;
+            border: none;
+            border-radius: 8px;
+            font-weight: 500;
             cursor: pointer;
             transition: all 0.3s ease;
-            margin: 0 auto;
-            display: block;
+            background: #3b82f6;
+            color: white;
+            font-size: 14px;
+            text-align: center;
+            width: 100%;
         }
 
-        .add-button:hover,
-        .add-link-button:hover {
-            background: #0056b3;
+        .add-button:hover, 
+        .add-link-button:hover, 
+        .add-note-button:hover {
+            background: #2563eb;
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(37, 99, 235, 0.2);
         }
 
+        /* 工具箱按钮样式 */
         .action-buttons {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 12px;
         }
 
         .action-button {
-            padding: 12px;
-            background: #f8f9fa;
-            color: #2c3e50;
-            border: 2px solid #e1e8ed;
-            border-radius: 8px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: all 0.3s ease;
+            background: #f1f5f9;
+            color: #475569;
+            font-weight: 500;
         }
 
         .action-button:hover {
+            background: #e2e8f0;
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+        }
+
+        /* 下拉菜单样式 - 恢复原始功能 */
+        .custom-select {
+            position: relative;
+        }
+
+        .selected-option {
+            padding: 8px 12px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            cursor: pointer;
+            background: white;
+        }
+
+        .dropdown-menu {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            margin-top: 2px;
+            max-height: 200px;
+            overflow-y: auto;
+            z-index: 1000;
+            display: none;
+        }
+
+        .dropdown-menu.show {
+            display: block;
+        }
+
+        .dropdown-item {
+            padding: 8px 12px;
+            cursor: pointer;
+        }
+
+        .dropdown-item:hover {
+            background: #f8f9fa;
+        }
+
+        .dropdown-item.selected {
             background: #e9ecef;
-            border-color: #007bff;
+        }
+
+        /* 笔记编辑器样式 */
+        .note-form textarea {
+            min-height: 120px;
+            resize: vertical;
+            font-family: inherit;
+            line-height: 1.5;
+        }
+
+        /* 响应式调整 */
+        @media (max-width: 768px) {
+            .tools-section {
+                width: 100%;
+                padding: 16px;
+            }
         }
 
         /* Toast提示样式 */
