--- a/frontend/index.html
+++ b/frontend/index.html
@@ -140,12 +140,11 @@
             z-index: 99;
         }
 
-        .section-title {
-            font-size: 20px;
-            color: #2c3e50;
+        .section-header .section-title {
+            font-size: 28px;
             font-weight: 600;
+            color: #2d3748;
             margin: 0;
-            padding-left: 10px;
         }
 
         /* 分类筛选器样式 */
@@ -333,7 +332,7 @@
         .link-item {
             background: white;
             border: 1px solid #e1e8ed;
-            border-radius: 8px;
+            border-radius: 16px;
             padding: 15px;
             display: flex;
             flex-direction: column;
@@ -1564,11 +1563,13 @@
         /* 添加新的样式 */
         .main-content {
             flex: 1;
+            background: white;
+            border-radius: 16px;
         }
 
         .notes-section {
             background: white;
-            border-radius: 10px;
+            border-radius: 16px;
             padding: 20px;
         }
 
@@ -1662,6 +1663,12 @@
             font-size: 20px;
             opacity: 0.7;
         }
+
+        .links-section {
+            background: white;
+            border-radius: 16px;
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
@@ -1719,7 +1726,7 @@
                         </div>
                     </div>
                     <div class="section-header">
-                        <h2 class="section-title">链接列表</h2>
+                        <h1 class="section-title">链接列表</h1>
                         <div class="header-controls">
                             <button class="sort-button" onclick="toggleCategorySort()" title="切换排序方向">
                                 <span class="sort-icon">↓</span>
@@ -1760,7 +1767,7 @@
                         </div>
                     </div>
                     <div class="section-header">
-                        <h2 class="section-title">笔记列表</h2>
+                        <h1 class="section-title">笔记列表</h1>
                         <div class="header-controls">
                             <button class="sort-button" onclick="toggleNoteSort()" title="切换排序方向">
                                 <span class="sort-icon">↓</span>
