UII奋斗奋斗说三道四萨达省

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2924,13 +2924,16 @@
                 const response = await fetch(`${baseUrl}/api/links/${id}`, {
                     method: 'PUT',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Cache-Control': 'no-cache',
+                        'Pragma': 'no-cache'
                     },
                     body: JSON.stringify({ title, url, description })
                 });
                 
+                const data = await response.json();
+                
                 if (!response.ok) {
-                    const data = await response.json();
                     throw new Error(data.error || '更新失败');
                 }
 
@@ -2940,6 +2943,23 @@
                 // 获取当前选中的分类
                 const selectedOption = document.querySelector('.category-filter .selected-option');
                 const currentCategory = selectedOption.getAttribute('data-value') || 'all';
+
+                // 更新favicon
+                if (data.link && data.link.id) {
+                    console.log('开始更新favicon...');
+                    await updateLinkFavicon(data.link.id);
+                }
+
+                // 清除可能的图片缓存
+                const faviconImages = document.querySelectorAll('.link-favicon');
+                faviconImages.forEach(img => {
+                    const currentSrc = img.src;
+                    if (currentSrc.includes('?')) {
+                        img.src = currentSrc.split('?')[0] + '?t=' + new Date().getTime();
+                    } else {
+                        img.src = currentSrc + '?t=' + new Date().getTime();
+                    }
+                });
 
                 // 重新加载链接
                 await loadLinks(currentCategory);
@@ -4214,7 +4234,12 @@
             try {
                 console.log('[updateLinkFavicon] 开始更新链接favicon, linkId:', linkId);
                 const response = await fetch(`${baseUrl}/api/auto-update-favicon/${linkId}`, {
-                    method: 'POST'
+                    method: 'POST',
+                    headers: {
+                        'Cache-Control': 'no-cache, no-store, must-revalidate',
+                        'Pragma': 'no-cache',
+                        'Expires': '0'
+                    }
                 });
 
                 if (!response.ok) {
@@ -4223,6 +4248,16 @@
 
                 const data = await response.json();
                 console.log('[updateLinkFavicon] 更新成功，新的favicon:', data.iconUrl);
+
+                // 立即更新对应链接的favicon
+                const linkFavicon = document.querySelector(`[data-id="${linkId}"] .link-favicon`);
+                if (linkFavicon && data.iconUrl) {
+                    const timestamp = new Date().getTime();
+                    linkFavicon.src = data.iconUrl.includes('?') 
+                        ? `${data.iconUrl}&t=${timestamp}`
+                        : `${data.iconUrl}?t=${timestamp}`;
+                }
+
                 return data.iconUrl;
             } catch (error) {
                 console.error('[updateLinkFavicon] 更新失败:', error);
